Commit by Junie: Update game controller, app config, and logging
This commit includes several improvements and configuration changes:

- Android App:
  - GameFragment: Implemented 'submitGuess' logic, fixed palette/guess control building order, and improved compatibility by avoiding Java 21 'getLast()' on List.
  - AndroidManifest: Added INTERNET permission.
  - build.gradle.kts & gradle.properties: Commented out core library desugaring.
- Codebreaker Client:
  - service.properties: Increased logLevel to BODY for better debugging.

Co-authored-by: Junie <junie@jetbrains.com>